<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcome_tv"
            android:textColor="@color/purple_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/welcome_to_dextro"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/verify_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/verify_your_number"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_tv" />

        <TextView
            android:id="@+id/helper_txt_1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/please_enter_your_mobile_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verify_title_tv" />

        <TextView
            android:id="@+id/helper_txt_2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/you_ll_receive_an_one_time_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helper_txt_1_tv" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp_spinner"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingTop="16dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_contentColor="@color/black"
            app:ccp_countryPreference="in"
            app:ccp_rippleEnable="true"
            app:ccp_showNameCode="false"
            app:ccp_textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/phone_num_til"
            app:layout_constraintEnd_toStartOf="@+id/phone_num_til"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/helper_txt_2_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_num_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:minEms="7"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ccp_spinner"
            app:layout_constraintTop_toBottomOf="@+id/helper_txt_2_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_num_tiet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeActionId="6"
                android:imeActionLabel="Send"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="180dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/verify_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:enabled="false"
            android:text="@string/verify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_num_til" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>