<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.auth.SignUpActivity">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminate="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/signup_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="64dp"
                android:text="@string/profile_info"
                android:textColor="?attr/colorPrimary"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/helper_txt_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"

                android:text="@string/please_provide_your_profile_pic_and_a_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_title_tv" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_iv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                android:clickable="true"

                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_person_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/helper_txt_tv"
                app:shapeAppearanceOverlay="@style/CircularImageView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:minEms="18"
                app:boxBackgroundColor="#00FFFFFF"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_iv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_tiet"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/please_enter_your_username"
                    android:inputType="textPersonName"
                    android:maxLength="20"
                    android:paddingBottom="0dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/ic_baseline_arrow_right_24"
                android:drawableTint="@color/white"
                android:text="@string/next_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_til" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/upload_img_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/user_iv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/user_iv"
                app:layout_constraintTop_toBottomOf="@+id/helper_txt_tv"
                app:iconGravity="top"
                app:icon="@drawable/ic_round_upload_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>